  * Added functions to generate the TBN and DRX filter magnitude response
  * Added versions of the spectra plotters, the correlations, and the stand plotters that use MCS meta-data bundles

0.4.3
  * Cleaned up the various __init__.py scripts
  * Fixed a few typos in lsl.correlator.uvUtils
  * Fixed a typo in the progress bar caused some decrements to increment

0.4.2
  * Fixed tbwSpectra.py to skip over non-TBW frames at the beginning of a TBW file
  * Fixed the common.stations.geo2ecef() conversion function (Ticket #16)
  * Fixed the correlator.fx.FXMaster() function (Ticket #18)
  * Fixed a few type conversion problems in correlator._core (core.c) introduced with the new data types
  * Fixed a frequency units conversion in tbnSpectra.py
  * Improved polarization support in the FITS IDI writer
  * Fixed a sign error in the fractional delay correction of the correlator F engine
  * Improved the speed of the X Engine
  * Fixed a azimuth definition problem in astro_array.c
  * Updated the included SSMIF to the 5/18/2011 version
  * Updated the correlateTBN script to make computing XX and YY products easier
  * Added support for different cable attenuation models supported in MCS0031, v5
  * Added support for the old 20-stand prototype system through lsl.common.stations.prototypeSystem
  * Updated the correlateTBW script to make computing XX and YY products easier
  * Updated SSMIF with new stretch and cable gain coefficients
  * Added support for time-domain blanking via the 'ClipLevel' keyword to various _spec and _core routines

0.4.1
  * Fixed a problem with the C readers that manifests itself on 32-bit platforms
  * Modified sphinx to be more independent about version numbers and release notes
  * Added additional PyDict checks to the _gofast module
  * Modified lsl.sim.drx to zero the frame and seconds counts to make the DRX frames ICD compliant
  * Fixed a small bug in lsl.sim.tbw/tbn/drx that caused the seconds counts to be wrong

0.4.0