@@ -72,6 +72,50 @@ class fx_tests(unittest.TestCase):
 		fakeData = fakeData.astype(numpy.csingle)
 		freq, spectra = fx.SpecMaster(fakeData, SampleRate=1e5, CentralFreq=38e6)
 
+	### SpecMasterP Function ###
+	
+	def test_window(self):
+		"""Test that window functions can be passed to SpecMaster."""
+		
+		fakeData = numpy.random.rand(self.nAnt,1024) + 3.0
+		fakeData = fakeData.astype(numpy.int16)
+		freq, spectra = fx.SpecMasterP(fakeData, LFFT=128, window=numpy.blackman)
+
+		fakeData = numpy.random.rand(self.nAnt,1024) + 1j*numpy.random.rand(self.nAnt,1024) + 3.0 + 3.0j
+		fakeData = fakeData.astype(numpy.csingle)
+		freq, spectra = fx.SpecMasterP(fakeData, LFFT=128, window=numpy.hamming)
+		
+	def test_window_custom(self):
+		"""Test that custom window functions can be passed to SpecMaster."""
+
+		def wndw(L):
+			return numpy.kaiser(L, 5)
+
+		fakeData = numpy.random.rand(self.nAnt,1024) + 3.0
+		fakeData = fakeData.astype(numpy.int16)
+		freq, spectra = fx.SpecMasterP(fakeData, LFFT=128, window=wndw)
+		
+		def wndw2(L):
+			return numpy.kaiser(L, 1)
+		
+		fakeData = numpy.random.rand(self.nAnt,1024) + 1j*numpy.random.rand(self.nAnt,1024) + 3.0 + 3.0j
+		fakeData = fakeData.astype(numpy.csingle)
+		freq, spectra = fx.SpecMasterP(fakeData, LFFT=128, window=wndw2)
+
+	def test_spectra_real(self):
+		"""Test the SpecMaster function on real-valued data."""
+
+		fakeData = numpy.random.rand(self.nAnt,1024) + 3.0
+		fakeData = fakeData.astype(numpy.int16)
+		freq, spectra = fx.SpecMasterP(fakeData, LFFT=128)
+		
+	def test_spectra_complex(self):
+		"""Test the SpecMaster function on complex-valued data."""
+		
+		fakeData = numpy.random.rand(self.nAnt,1024) + 1j*numpy.random.rand(self.nAnt,1024) + 3.0 + 3.0j
+		fakeData = fakeData.astype(numpy.csingle)
+		freq, spectra = fx.SpecMasterP(fakeData, LFFT=128, SampleRate=1e5, CentralFreq=38e6)
+
 	### FXMaster Function ###
 
 	def test_correlator_real(self):
