@@ -286,6 +286,27 @@ class reader_tests(unittest.TestCase):
 		self.assertEqual(tune, 1)
 		self.assertEqual(pol,  0)
 		fh.close()
+		
+	def test_drx_read_block(self):
+		"""Test reading in a block of DRX frames."""
+		
+		fh = open(drxFile, 'rb')
+		cFrame = drx.readFrame(fh)
+		b,t,p = cFrame.parseID()
+		while 2*(t-1)+p != 0:
+			cFrame = drx.readFrame(fh)
+			b,t,p = cFrame.parseID()
+			
+		# Read a block
+		cFrames = drx.readBlock(fh)
+		
+		# Make sure everthing is in the right place
+		self.assertEqual(cFrames.x1.parseID(), (2,1,0))
+		self.assertEqual(cFrames.x2.parseID(), (2,2,0))
+		self.assertEqual(cFrames.y1.parseID(), (2,1,1))
+		self.assertEqual(cFrames.y2.parseID(), (2,2,1))
+		
+		fh.close()
 
 	def test_drx_errors(self):
 		"""Test reading in all frames from a truncated DRX file."""
@@ -324,6 +345,19 @@ class reader_tests(unittest.TestCase):
 		self.assertEqual(b3, 0)
 		self.assertEqual(b4, 0)
 		fh.close()
+		
+	def test_drx_rate(self):
+		"""Test finding out the DRX sample rate."""
+		
+		fh = open(drxFile, 'rb')
+		cFrame = drx.readFrame(fh)
+		fh.seek(0)
+		
+		# Sample rate
+		self.assertEqual(cFrame.getSampleRate(), drx.getSampleRate(fh))
+		
+		# Filter code
+		self.assertEqual(cFrame.getFilterCode(), drx.getSampleRate(fh, FilterCode=True))
 
 	def test_drx_comps(self):
 		"""Test the DRX frame comparison operators (>, <, etc.) for time tags."""
